--- a/college-website-backend/package.json
+++ b/college-website-backend/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "chmod +x node_modules/.bin/prisma && prisma generate"
+
   },
   "keywords": [],
   "author": "",
