--- a/college-website-backend/package.json
+++ b/college-website-backend/package.json
@@ -18,6 +18,7 @@
     "@prisma/client": "^6.5.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "nodemailer": "^6.10.0",
     "prisma": "^6.5.0",
     "twilio": "^5.5.0"
