--- a/college-website-backend/package.json
+++ b/college-website-backend/package.json
@@ -15,16 +15,16 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.5.0",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^5.9.2",
     "nodemailer": "^6.10.0",
     "prisma": "^6.5.0",
-    "twilio": "^5.5.0",
-    "mongodb": "^5.1.0",
-    "bcrypt": "^5.1.0",
-    "jsonwebtoken": "^9.0.0"
-   
+    "twilio": "^5.5.0"
   }
 }
